--- a/clg2.html
+++ b/clg2.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil placeat distinctio sapiente dolore quibusdam ut, debitis sed recusandae dolorem eum modi veniam! Eos dolorem eaque officiis! Iste ab cupiditate nisi!</div>
     <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga repellat veritatis quas porro perspiciatis ea recusandae repellendus quibusdam excepturi sit corrupti eaque, est odit esse! Voluptates alias cupiditate accusantium vitae.</div>
 </body>
+
 </html>
