--- a/clg3.html
+++ b/clg3.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla itaque assumenda at repellat dolore, voluptatum incidunt illo voluptas quam unde veniam ipsum placeat, asperiores accusantium suscipit corrupti, veritatis aliquam! Pariatur.</div>
 </body>
 </html>
