--- a/clg4.html
+++ b/clg4.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur animi cupiditate vero asperiores et dolore aut nam nisi dicta perspiciatis accusamus, earum tenetur incidunt illum placeat est eaque officiis velit.</div>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur animi cupiditate vero asperiores et dolore aut nam nisi dicta perspiciatis , earum tenetur incidunt illum placeat est eaque officiis velit.</div>
 </body>
 </html>
